--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts",
-    "dev": "nodemon --exec ts-node src/app.ts"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node dist/app.js",
+  "dev": "nodemon --exec ts-node src/app.ts",
+  "build": "prisma generate && tsc && cp -r src/generated dist/",
+  "postinstall": "prisma generate"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
